Changelog
=========

1.0.6
-----

- Made the tests forward-compatible with Python 2.6.
  [hannosch]

1.0.5 - August 18, 2008
-----------------------

- Documentation updates.
  [hannosch]


1.0.4 - March 9, 2008
---------------------

- Added option to omit the current folder in a browse query, this is used
  for the UberSelectionWidget.
  [fschulze]


1.0.3 - February 13, 2008
-------------------------

- Added tests for the catalog, groups and users sources. Fixed three bugs,
  where a LookupError was not raised.
  [hannosch]

- Added tests for the special term classes.
  [hannosch]

- Added tests for the language, security, skins, types and
  workflow vocabularies.
  [hannosch]


1.0.2 - December 24, 2007
-------------------------

- Fixed invalid context argument passed into the translation machinery in
  the workflow state vocabulary. This fixes
  http://dev.plone.org/plone/ticket/7492.
  [hannosch]

- Added optional default query string to searchable text source.
  [fschulze]

- Correct name for attributes.
  [wichert]


1.0.1 - August 17, 2007
-----------------------

- Fixed catalog vocabulary when dealing with the degenerate-case of
  an empty value. This makes it work better with the UberSelectionWidget.
  [optilude]

- Made catalog vocabulary less fragile for simple/short queries.
  [optilude]


1.0 - August 14, 2007
---------------------

- Fixed ReallyUserFriendlyTypesVocabulary to include the Messages for
  type names. This refs http://dev.plone.org/plone/ticket/6911.
  [hannosch]


1.0rc3 - July 28, 2007
----------------------

- Fixed missing history.
  [hannosch]


1.0rc2 - July 27, 2007
----------------------

- Fixed to return localized workflow state names.
  [deo]


1.0rc1 - July 9, 2007
---------------------

- Added new ReallyUserFriendlyTypes and a BAD_TYPES list, which are used
  to filter out types which are not content types at all.
  [hannosch]

- Added new AvailableContentLanguages and SupportedContentLanguages
  vocabularies.