@@ -6,6 +6,11 @@ Changelog
 
 - Made the tests forward-compatible with Python 2.6.
   [hannosch]
+  
+- The QuerySearchableTextSourceView made terms with string titles. However
+  zope.app.form.browser.source assumes it to be unicode, with the result that
+  you get unicode errors if you have non-ascii characters. [regebro]
+  
 
 1.0.5 - August 18, 2008
 -----------------------
